<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">Book Finder</string>
<string name="action_settings">Settings</string>
<string name="action_search">Search a post</string>
<string name="image">image</string>

<string name="remember_me">Remember me</string>
<string name="sign_in">Sign in</string>
<string name="sign_up">Sign up</string>
<string name="forget_password">Forget Password</string>

<string name="login_title">Book Finder</string>
<string name="password">Password: </string>
<string name="confirmation">Confirmation: </string>
<!-- Book Details -->
<string name="book_detail_title">this book!</string>
<string name="available">Available:</string>
<string name="owner">Owner:</string>
<string name="like">Like this Post!</string>
<string name="borrow">Borrow</string>
<string name="pricedetail">$3/week</string>
<string name= "availableBookDetail">20 weeks</string>
<string name="ownerBookDetail">Bob</string>
<string name="likenum">23</string>
<string name="requesternum">7</string>
<string name="nameBookDetail">Head First Java O\'Reily</string>
<string name="descriptionBookDetail">
    		This book is very good 
	        This book is very good This book is very
	        good This book is very good This book is
	        very good This book is very good This book
	        is very good This book is very good This 
	        book is very good This book is very good 
	        This book is very good This book is very 
	        good This book is very good  </string>
<string name="responseDetail">Owner has not responded.</string>
<string name="requestdetailsTitle">Requesting to Borrow</string>
<!-- post list -->
<string name="open">Open</string>

<!-- My Books -->
<string name="my_post">My Book for</string>
<string name="titleMyPostDetail">Sell</string>
<string name="request">requests</string>
<string name="seeRequest">More</string>
<string name="edit">Edit</string>
<string name="delete">Delete</string>
<string name="withdraw">Withdraw</string>

<!-- MultiWindow -->
<string name="title_activity_tab1">Tab1Activity</string>
<string name="title_activity_tab2">Tab2Activity</string>
<string name="title_activity_tab3">Tab3Activity</string>
<!-- Edit My Books Page Theme -->
<string name="editMyBookPageTitle">Edit</string>

<string name="name">Name: </string>
<string name="user_name">Peter</string>
<string name="price">Price: $</string>
<string name="per"> per </string>
<!-- <string name="rent">Rent for </string> -->
<string name="cover">Cover</string>
<string name="bookCover_alt">Book Cover</string>
<string name="description">Description: </string>
<string name="save">Save</string>
<string name="cancel">Cancel</string>
<string name="takePhoto">take photo</string>
<string name="choosePhoto">choose photo</string>
<!-- Edit My Profile Page Theme -->
<string name="editProfilePageTitle">Edit Profile</string>
<string name="profilePhoto">Profile Photo</string>
<string name="gender">Gender:</string>
<string name="user_gender">M</string>
<string name="campus">Campus:</string>
<string name="user_campus">Pittsburg</string>
<string name="contact">Contact:</string>
<string name="user_contact">4567506567</string>
<string name="address">Address:</string>
<string name="user_address">Pittsburg</string>
<string name="change_password">Change Password</string>
<string name="logout">Logout</string>
<!-- Add New Book For Rent Theme -->
<string name="addNewBookForRentTitle">Post New Book For Rent</string>
<string name="post">Post</string>
<!-- Mybooks list -->
<string name="sell">Sell</string>
<string name="rent">Rent: </string>
<string name="email">Email: </string>

<!-- profile detail -->
<string name="profile_detail_photo">Profile Photo</string>

<!-- mybooks_requestlist -->
<string name="request_list">Request List</string>
<string name="decline">Decline All</string>
<string name="accept">Accept</string>

<style name="ButtonText" parent="@android:style/TextAppearance.Medium">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">30dp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
</style>

<!-- photos -->
<string name="album_name">Bookapp_album</string>
<string name="cannot">Bookapp cannot</string>


  <!-- GeoLocation User interface labels and strings -->

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
</resources>
