<?xml version="1.0" encoding="utf-8"?> 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PostListActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:text="@string/my_post"
        android:textSize="22sp" />
    
    <TextView
        android:id="@+id/titleMyPostDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="138dp"
        android:text="@string/titleMyPostDetail"
        android:textSize="22sp" />
    
    <ImageView
        android:id="@+id/postdetails_coverBookDetail"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/cover" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:text="@string/name"
        android:textSize="13sp" />
    
    <TextView
        android:id="@+id/postdetails_nameBookDetail"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="60dp"
        android:textSize="13sp"
        android:text="@string/nameBookDetail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_nameBookDetail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textSize="13sp"
        android:text="@string/price" />
    
    <TextView
        android:id="@+id/postdetails_priceBookDetail"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_nameBookDetail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:textSize="13sp"
        android:text="@string/pricedetail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_priceBookDetail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textSize="13sp"
        android:text="@string/available" />
    
    <TextView
        android:id="@+id/postdetails_availableBookDetail"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_priceBookDetail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="87dp"
        android:textSize="13sp"
        android:text="@string/availableBookDetail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_availableBookDetail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textSize="13sp"
        android:text="@string/owner" />
    
    <TextView
        android:id="@+id/postdetails_ownerBookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_availableBookDetail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:textSize="13sp"
        android:text="@string/ownerBookDetail" />
    
     <ScrollView
        android:id="@+id/postdetails_descriptionScrollBookDetail"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@id/postdetails_ownerBookDetail"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >
	    <TextView
	        android:id="@+id/postdetails_descriptionBookDetail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/descriptionBookDetail" />
    </ScrollView>
    
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/postdetails_descriptionScrollBookDetail"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/like"
        android:contentDescription="@string/like" />
    
    <TextView
        android:id="@+id/postdetails_likeNumPostDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_descriptionScrollBookDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:textSize="13sp"
        android:text="@string/likenum" />
    
    <TextView
        android:id="@+id/postdetails_requestNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/postdetails_likeNumPostDetail"
        android:layout_alignBottom="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/requesternum" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/postdetails_requestNum"
        android:layout_alignBottom="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:text="@string/request"
        android:textSize="13sp" />

    <Button
        android:id="@+id/postdetails_seeRequsts"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_toRightOf="@id/postdetails_requestNum"
        android:layout_alignBaseline="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="65dp"
        android:text="@string/seeRequest"
        android:textSize="13sp" />
    
    <Button
        android:id="@+id/postdetails_editMyPost"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_below="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="65dp"
        android:text="@string/edit"
        android:textSize="13sp" />
    
    <Button
        android:id="@+id/postdetails_deleteMyPost"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_below="@id/postdetails_likeNumPostDetail"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/postdetails_editMyPost"
        android:layout_marginRight="65dp"
        android:text="@string/delete"
        android:textSize="13sp" />
    
</RelativeLayout>