<?xml version="1.0" encoding="utf-8"?> 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.3"
        android:background="@drawable/bg1"
        android:contentDescription="@string/image" />
    
    <TextView
        android:id="@+id/titleBookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/my_post"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/titleMyPostDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/titleBookDetail"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/titleBookDetail"
        android:text="@string/titleMyPostDetail"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    
    <ImageView
        android:id="@+id/postdetails_coverBookDetail"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/cover" />

<LinearLayout 
     android:id="@+id/postdetails_linear1"
     android:layout_below="@id/titleBookDetail"
     android:layout_marginTop="15dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/name"/>
    
    <TextView
        android:id="@+id/postdetails_nameBookDetail"
        android:layout_marginLeft="5dp"  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameBookDetail"
        android:textSize="13sp" />
</LinearLayout>    

<LinearLayout 
     android:id="@+id/postdetails_linear2"
     android:layout_below="@id/postdetails_linear1"
     android:layout_marginTop="20dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/price"/>
    
    <TextView
        android:id="@+id/postdetails_priceBookDetail"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pricedetail"
        android:textSize="13sp" />
</LinearLayout>   

<LinearLayout 
     android:id="@+id/postdetails_linear3"
     android:layout_below="@id/postdetails_linear2"
     android:layout_marginTop="20dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
    <TextView
        android:id="@+id/postdetails_bookAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/available"/>   
    <TextView
        android:id="@+id/postdetails_availableBookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/availableBookDetail"
        android:textSize="13sp" />
</LinearLayout>  

<LinearLayout 
     android:id="@+id/postdetails_linear4"
     android:layout_below="@id/postdetails_linear3"
     android:layout_marginTop="20dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/owner" />    
    <TextView
        android:id="@+id/postdetails_ownerBookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/ownerBookDetail"
        android:textSize="13sp" />
</LinearLayout>    
	<TextView
	    android:id="@+id/postdetails_description"
	    android:layout_below="@id/postdetails_linear4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"      
        android:layout_marginTop="15dp" 
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/description"/>
	
     <ScrollView
        android:id="@+id/postdetails_descriptionScrollBookDetail"
        android:layout_below="@id/postdetails_description"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp" >
	    <TextView
	        android:id="@+id/postdetails_descriptionBookDetail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/descriptionBookDetail" />
    </ScrollView>
    
    <ImageView
        android:id="@+id/postdetails_likeBookDetail"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/postdetails_descriptionScrollBookDetail"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/like"
        android:src="@drawable/like" />
    
    <TextView
        android:id="@+id/postdetails_likeNumPostDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postdetails_descriptionScrollBookDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/likenum" />
    
    <TextView
        android:id="@+id/postdetails_requestNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/postdetails_likeNumPostDetail"
        android:layout_alignBottom="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/requesternum" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/postdetails_requestNum"
        android:layout_alignBottom="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:text="@string/request"
        android:textSize="13sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/postdetails_seeRequsts"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_toRightOf="@id/postdetails_requestNum"
        android:layout_alignBaseline="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="65dp"
        android:text="@string/seeRequest"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button4" 
        android:onClick="showRequesterList" />
    
    <Button
        android:id="@+id/postdetails_editMyPost"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_below="@id/postdetails_likeNumPostDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="85dp"
        android:text="@string/edit"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button"
        android:onClick="editBook" />
    
    <Button
        android:id="@+id/postdetails_deleteMyPost"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_below="@id/postdetails_likeNumPostDetail"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/postdetails_editMyPost"
        android:layout_marginRight="85dp"
        android:text="@string/delete"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button2" />
    
</RelativeLayout>