<?xml version="1.0" encoding="utf-8"?> 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PostListActivity" >
	
     <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.3"
        android:background="@drawable/bg1"
        android:contentDescription="@string/image" />
     
    <TextView
        android:id="@+id/myrequestdetails_requestdetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp" 
        android:textStyle="bold"
        android:text="@string/requestdetailsTitle"/>
    
    <ImageView
        android:id="@+id/myrequestdetails_coverBookDetail"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/cover" />

<LinearLayout 
     android:id="@+id/myrequestdetails_linear1"
     android:layout_below="@id/myrequestdetails_requestdetailsTitle"
     android:layout_marginTop="15dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/name"/>
    
    <TextView
        android:id="@+id/myrequestdetails_nameBookDetail"
        android:layout_marginLeft="10dp"  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameBookDetail"
        android:textSize="13sp" />
</LinearLayout>    

<LinearLayout 
     android:id="@+id/myrequestdetails_linear2"
     android:layout_below="@id/myrequestdetails_linear1"
     android:layout_marginTop="15dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/price"/>
    
    <TextView
        android:id="@+id/myrequestdetails_priceBookDetail"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pricedetail"
        android:textSize="13sp" />
</LinearLayout>    

<LinearLayout 
     android:id="@+id/myrequestdetails_linear3"
     android:layout_below="@id/myrequestdetails_linear2"
     android:layout_marginTop="15dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
    <TextView
        android:id="@+id/myrequestdetails_bookAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/available"/> 
    
    <TextView
        android:id="@+id/myrequestdetails_availableBookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/availableBookDetail"
        android:textSize="13sp" />
</LinearLayout>

<LinearLayout 
     android:id="@+id/myrequestdetails_linear4"
     android:layout_below="@id/myrequestdetails_linear3"
     android:layout_marginTop="15dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"       
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/owner" />  
    
    <TextView
        android:id="@+id/myrequestdetails_ownerBookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/ownerBookDetail"
        android:textSize="13sp" />
</LinearLayout>   

	<TextView
	    android:id="@+id/myrequestdetails_description"
	    android:layout_below="@id/myrequestdetails_linear4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"      
        android:layout_marginTop="15dp" 
        android:textSize="13sp" 
        android:textStyle="bold"
        android:text="@string/description"/>
	
     <ScrollView
        android:id="@+id/myrequestdetails_descriptionScrollBookDetail"
        android:layout_below="@id/myrequestdetails_description"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp" >
	    <TextView
	        android:id="@+id/myrequestdetails_descriptionBookDetail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/descriptionBookDetail" />
    </ScrollView>
    
    <TextView
        android:id="@+id/myrequestdetails_responseDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myrequestdetails_descriptionScrollBookDetail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/responseDetail" />

    <Button
        android:id="@+id/myrequestdetails_deleteMyPost"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myrequestdetails_responseDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/withdraw"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button2" />
    
</RelativeLayout>